--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "http-server",
   "version": "1.0.0",
   "description": "homework",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "prestart": "npm install",
     "start": "forever server.js",
